# NormFlow

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  install.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release-draft.yml
docs/adr/: 0001-batch-import-coordination.md  0005-distribute-through-github-releases.md
docs/agents/: domain.md
frontend/: index.html  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: csv.ts  main.test.ts  main.ts  style.css  test-setup.ts
release/model/: ATTRIBUTION.md  SOURCE.json
scripts/: build-release-payload  build-wheel  release_smoke_test.sh  release_version_check.sh  test-install.sh
src/normflow/: __init__.py  __main__.py  api.py  batch_import.py  cli.py  csv_ops.py  embedding_model.py  llm_config.py  llm_matcher.py  managed_installation.py  mapping_service.py  models.py  project.py  project_service.py  review_service.py  semantic_index.py  suggest_service.py  suggestion_lookup.py  update_check.py  workspace.py
src/normflow/static/: index.html
src/normflow/static/assets/: index-B0mdHquH.js  index-B3pR35_z.js  index-B4P2nK8d.js  index-B93kR-mC.js  index-BWQYzXFc.css  index-BqBU8oho.js  index-BxS36es1.js  index-CAWiWrrz.js  index-CAgczxXw.css  index-CKvx3rMU.js  index-CX1l-p9O.js  index-CYA7yMXE.css  index-CYjyWCUu.js  index-Cn3dk6SR.css  index-DIZfWNwJ.css  index-DInAWXTv.js  index-DO3N2v8z.js  index-XzCK039-.js  index-nzoLFZ3l.css  index-opmyAklj.js  index-pJPaYV2z.js
tests/: conftest.py  helpers.py  test_api.py  test_batch_import_runs.py  test_ci.py  test_cli.py  test_cli_data_project_discovery.py  test_cli_imports.py  test_cli_update_check.py  test_documentation.py  test_embedding_model.py  test_import_records.py  test_installer.py  test_llm_config.py  test_packaging.py  test_project_resolution.py  test_project_service.py  test_release_payload.py  test_release_workflow.py  test_review_items.py  test_semantic_index.py  test_suggest_llm.py  test_suggest_semantic.py  test_suggestion_lookup.py  test_update_check.py  test_workspace_service.py
tools/: release_payload.py  smoke_release_payload.py
