[project]
name = "normflow"
version = "0.1.0"
description = "CLI-first, human-in-the-loop text normalization workbench"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.9.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=3.0.0",
    "sqlmodel>=0.0.24",
    "typer>=0.15.1",
]

[project.scripts]
normflow = "normflow.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/normflow"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
