[project]
name = "normflow"
version = "0.1.0"
description = "CLI-first, human-in-the-loop text normalization workbench"
readme = "README.md"
authors = [
    { name = "Trevor Santiago", email = "69698117+tjsanti@users.noreply.github.com" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "faiss-cpu>=1.9.0",
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.0",
    "sentence-transformers>=3.0.0",
    "sqlmodel>=0.0.24",
    "typer>=0.15.1",
    "uvicorn>=0.30.0",
]

[project.urls]
Repository = "https://github.com/tjsanti/NormFlow"
Issues = "https://github.com/tjsanti/NormFlow/issues"

[project.scripts]
normflow = "normflow.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/normflow"]
